--- a/src/boot/loader/entries/arch-fallback.conf
+++ b/src/boot/loader/entries/arch-fallback.conf
@@ -2,8 +2,4 @@ title Arch Linux
 linux /vmlinuz-linux
 initrd /amd-ucode.img
 initrd /initramfs-linux-fallback.img
-options rd.luks.name=</dev/disk/by-uuid>=system rd.luks.name=</dev/disk/by-uuid>=home root=/dev/mapper/system acpi_osi="!Windows 2000" lsm=landlock,lockdown,yama,intergrity,apparmor,bpf rw splash
-
-
-
-
+options rd.luks.name=</dev/disk/by-uuid>=system rd.luks.name</dev/disk/by-uuid>=home root=/dev/mapper/system lsm=landlock,lockdown,yama,intergrity,apparmor,bpf acpi_osi="!Windows 2000" amdgpu.sg_display=0 nowatchdog rw splash net.ifnames=0 rd.luks.options=discard
