--- a/src/boot/loader/entries/arch.conf
+++ b/src/boot/loader/entries/arch.conf
@@ -2,7 +2,7 @@ title Arch Linux
 linux /vmlinuz-linux
 initrd /amd-ucode.img
 initrd /initramfs-linux.img
-options rd.luks.name=</dev/disk/by-uuid>=system rd.luks.name=</dev/disk/by-uuid>=home root=/dev/mapper/system lsm=landlock,lockdown,yama,intergrity,apparmor,bpf acpi_osi="!Windows 2000" rw splash
+options rd.luks.name=</dev/disk/by-uuid>=system rd.luks.name</dev/disk/by-uuid>=home root=/dev/mapper/system lsm=landlock,lockdown,yama,intergrity,apparmor,bpf acpi_osi="!Windows 2000" amdgpu.sg_display=0 nowatchdog rw splash net.ifnames=0 rd.luks.options=discard
 
 
 
